--- a/src/app/components/talleres/registrartalleres/registrartalleres.component.html
+++ b/src/app/components/talleres/registrartalleres/registrartalleres.component.html
@@ -1,4 +1,4 @@
-<div class="page-container" *ngIf="(verificar() && isAdmin() )">
+<div class="page-container" *ngIf="(verificar())">
 
   <!-- FORMULARIO DE TALLER -------------------------------------------------->
   <div *ngIf="!tallerGuardado" class="card" >
