--- a/src/app/components/talleres/registrartalleres/registrartalleres.component.html
+++ b/src/app/components/talleres/registrartalleres/registrartalleres.component.html
@@ -13,6 +13,9 @@
         <mat-form-field appearance="outline">
           <mat-label>Título</mat-label>
           <input matInput formControlName="titulo" required>
+          <mat-error *ngIf="formTaller.controls['titulo'].hasError('maxlength') && formTaller.controls['titulo'].touched">
+                Máximo 20 caracteres
+              </mat-error>
         </mat-form-field>
 
         <!-- CATEGORIA - SELECT -->
