--- a/src/app/components/landingpage/landingpage.component.html
+++ b/src/app/components/landingpage/landingpage.component.html
@@ -37,7 +37,11 @@
 
   
   <!-- MAKI FLOTANTE -->
-  <img src="assets/images/maki.png" class="maki" alt="Maki">
+  <img
+  src="assets/images/maki.png"
+  class="maki"
+  alt="Maki"
+  (click)="toggleChatbot()"/>
 
   <!-- LAS FIJAS AQUÍ-->
   <section class="fijas">
@@ -73,3 +77,5 @@
   </div>
 </section>
 </div>
+
+<app-chatbot></app-chatbot>
