--- a/src/app/components/landingpage/landingpage.component.html
+++ b/src/app/components/landingpage/landingpage.component.html
@@ -27,11 +27,10 @@
   </div>
 
   <!-- MAKI flotante bien colocado -->
-  <div class="maki-bubble">
-    <img src="assets/images/maki.png" class="maki-img">
-   <div></div>
-    <div class="bubble">¿Planeamos tu finde?</div>
-  </div>
+  <div class="maki-bubble" (click)="toggleChatbot()">
+  <img src="assets/images/maki.png" class="maki-img">
+  <div class="bubble">¿Planeamos tu finde?</div>
+</div>
 
 </section>
 
