metiendo maki tras logeo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -76,7 +76,7 @@
       <div class="nav-right">
 
         <!-- Maki -->
-        <button mat-icon-button class="img-button" (click)="abrirMaki()">
+        <button mat-icon-button class="img-button" (click)="toggleChatbot()">
           <img src="assets/images/maki.png" class="img-icon" />
         </button>
 
